--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
     "eslint": "eslint"
   },
   "dependencies": {
-    "vue": "^3.3.8"
+    "vue": "^3.3.8",
+    "vue-i18n": "^9.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^8.53.0",
+    "@iconify-icons/ep": "^1.2.12",
+    "@iconify-icons/ri": "^1.2.10",
+    "@iconify/vue": "^4.1.1",
+    "@intlify/unplugin-vue-i18n": "^1.5.0",
     "@types/node": "^20.9.0",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
     "@vitejs/plugin-vue": "^4.5.0",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-define-config": "^1.24.1",
@@ -25,7 +31,10 @@
     "eslint-plugin-vue": "^9.18.1",
     "prettier": "^3.1.0",
     "typescript": "^5.2.2",
+    "unplugin-auto-import": "^0.17.2",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.0",
+    "vite-svg-loader": "^4.0.0",
     "vue-eslint-parser": "^9.3.2",
     "vue-tsc": "^1.8.22"
   }
