--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
     "eslint": "eslint"
   },
   "dependencies": {
+    "@pureadmin/descriptions": "^1.2.1",
+    "@pureadmin/table": "^3.1.2",
+    "@pureadmin/utils": "^2.4.7",
     "axios": "^1.6.8",
-    "vue": "^3.3.8",
-    "vue-i18n": "^9.7.0"
+    "echarts": "^5.5.0",
+    "@vueuse/motion": "^2.1.0",
+    "pinia": "^2.1.7",
+    "vue": "^3.4.23",
+    "vue-i18n": "^9.7.0",
+    "vue-router": "^4.3.2",
+    "vxe-table": "^4.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^8.53.0",
@@ -20,18 +28,31 @@
     "@iconify-icons/ri": "^1.2.10",
     "@iconify/vue": "^4.1.1",
     "@intlify/unplugin-vue-i18n": "^4.0.0",
+    "@pureadmin/theme": "^3.2.0",
     "@types/node": "^20.9.0",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
-    "@vitejs/plugin-vue": "^4.5.0",
+    "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-define-config": "^1.24.1",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-vue": "^9.18.1",
+    "postcss": "^8.4.38",
+    "postcss-html": "^1.6.0",
+    "postcss-import": "^16.1.0",
+    "postcss-scss": "^4.0.9",
     "prettier": "^3.1.0",
-    "typescript": "^5.2.2",
+    "sass": "^1.75.0",
+    "stylelint": "^16.4.0",
+    "stylelint-config-recess-order": "^5.0.1",
+    "stylelint-config-recommended-vue": "^1.5.0",
+    "stylelint-config-standard-scss": "^13.1.0",
+    "stylelint-prettier": "^5.0.0",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5",
     "unplugin-auto-import": "^0.17.2",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.2.10",
