--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@pureadmin/descriptions": "^1.2.1",
     "@pureadmin/table": "^3.1.2",
     "@pureadmin/utils": "^2.4.7",
+    "@vueuse/motion": "^2.1.0",
     "axios": "^1.6.8",
     "echarts": "^5.5.0",
-    "@vueuse/motion": "^2.1.0",
+    "element-plus": "^2.7.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.23",
     "vue-i18n": "^9.7.0",
