--- a/package.json
+++ b/package.json
@@ -13,41 +13,44 @@
     "@pureadmin/descriptions": "^1.2.1",
     "@pureadmin/table": "^3.1.2",
     "@pureadmin/utils": "^2.4.7",
+    "@vueuse/core": "^10.9.0",
     "@vueuse/motion": "^2.1.0",
     "axios": "^1.6.8",
     "echarts": "^5.5.0",
     "element-plus": "^2.7.1",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
-    "vue": "^3.4.23",
-    "vue-i18n": "^9.7.0",
+    "vue": "3.4.23",
+    "vue-i18n": "^9.13.1",
     "vue-router": "^4.3.2",
+    "vue-tippy": "^6.4.1",
+    "vue-types": "^5.1.1",
     "vxe-table": "^4.6.0"
   },
   "devDependencies": {
-    "@eslint/js": "^8.53.0",
+    "@eslint/js": "^9.1.1",
     "@iconify-icons/ep": "^1.2.12",
     "@iconify-icons/ri": "^1.2.10",
-    "@iconify/vue": "^4.1.1",
+    "@iconify/vue": "^4.1.2",
     "@intlify/unplugin-vue-i18n": "^4.0.0",
     "@pureadmin/theme": "^3.2.0",
     "@types/nprogress": "^0.2.3",
     "@types/node": "^20.9.0",
-    "@typescript-eslint/eslint-plugin": "^6.11.0",
-    "@typescript-eslint/parser": "^6.11.0",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "@typescript-eslint/parser": "^7.7.1",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "autoprefixer": "^10.4.19",
-    "eslint": "^8.53.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-define-config": "^1.24.1",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-vue": "^9.18.1",
+    "eslint": "^9.1.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-define-config": "^2.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-vue": "^9.25.0",
     "postcss": "^8.4.38",
     "postcss-html": "^1.6.0",
     "postcss-import": "^16.1.0",
     "postcss-scss": "^4.0.9",
-    "prettier": "^3.1.0",
+    "prettier": "^3.2.5",
     "sass": "^1.75.0",
     "stylelint": "^16.4.0",
     "stylelint-config-recess-order": "^5.0.1",
@@ -60,7 +63,22 @@
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.2.10",
     "vite-svg-loader": "^5.1.0",
-    "vue-eslint-parser": "^9.3.2",
-    "vue-tsc": "^1.8.22"
+    "vue-eslint-parser": "^9.4.2",
+    "vue-tsc": "^1.8.27"
+  },
+  "packageManager": "pnpm@9.0.6",
+  "pnpm": {
+    "allowedDeprecatedVersions": {
+      "sourcemap-codec": "*",
+      "domexception": "*",
+      "w3c-hr-time": "*",
+      "stable": "*",
+      "abab": "*"
+    },
+    "peerDependencyRules": {
+      "allowedVersions": {
+        "eslint": "9"
+      }
+    }
   }
 }
