--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.8",
     "echarts": "^5.5.0",
     "element-plus": "^2.7.1",
+    "js-cookie": "^3.0.5",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "vue": "3.4.23",
@@ -34,6 +35,7 @@
     "@iconify/vue": "^4.1.2",
     "@intlify/unplugin-vue-i18n": "^4.0.0",
     "@pureadmin/theme": "^3.2.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/nprogress": "^0.2.3",
     "@types/node": "^20.9.0",
     "@typescript-eslint/eslint-plugin": "^7.7.1",
