--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "globals": "15.12.0",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
-    "sass": "^1.76.0",
+    "sass": "1.72.0",
     "typescript": "^5.4.5",
     "typescript-eslint": "^8.16.0",
     "unocss": "^0.64.1",
